Fix app content overflow

--- a/apps/react-app-blog/src/styles/App.module.css
+++ b/apps/react-app-blog/src/styles/App.module.css
@@ -1,4 +1,3 @@
 .container {
   composes: container from './index.css';
-  width: 100%;
 }
