--- a/apps/react-app-blog/src/styles/index.css
+++ b/apps/react-app-blog/src/styles/index.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
@@ -13,6 +17,7 @@ a:visited {
 
 .container {
   max-width: 960px;
+  width: 100%;
   margin: 0 auto;
   padding: 8px 24px;
 }
